# kubeflow-project

./: README.md  kf-1.0.sh  kf-1.1.sh
.vagrant/machines/default/virtualbox/: vagrant_cwd
install/: README.md
pipeline/: docker-compose.yml  pipeline.py  pipeline.yml  pyproject.toml  requirements.txt
pipeline/scripts/: deploy.sh
pipeline/training/: main.py  main.sh  utils.py
